# MaryJane

./: .cirrus.yml  .gitignore  Makefile.am  README.md  configure.ac
build_msvc/: bitcoin_config.h
ci/lint/: 06_script.sh
ci/test/: 00_setup_env_i686_centos.sh  00_setup_env_native_asan.sh  00_setup_env_native_multiprocess.sh  00_setup_env_native_tsan.sh  00_setup_env_win64.sh  04_install.sh  05_before_script.sh  06_script_a.sh  06_script_b.sh
contrib/devtools/: README.md  copyright_header.py  gen-manpages.sh  gen-reddcoin-conf.sh
contrib/gitian-descriptors/: gitian-osx-signer.yml
contrib/macdeploy/: detached-sig-create.sh  macdeployqtplus
contrib/seeds/: generate-seeds.py  makeseeds.py
doc/: build-android.md  reddcoin-conf.md  release-notes.md  release-process.md
doc/man/: Makefile.am  reddcoin-cli.1  reddcoin-qt.1  reddcoin-tx.1  reddcoin-util.1  reddcoin-wallet.1  reddcoind.1
share/: setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  arith_uint256.cpp  arith_uint256.h  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-util-res.rc  bitcoin-util.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoind-res.rc  bitcoind.cpp  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsseeds.h  clientversion.cpp  coins.h  core_write.cpp  deploymentinfo.cpp  deploymentstatus.cpp  dummywallet.cpp  fs.cpp  init.cpp  logging.cpp  logging.h  miner.cpp  miner.h  net.h  net_processing.cpp  pow.cpp  pow.h  staker.cpp  (+11 more)
src/index/: txindex.h
(+281 files in other folders)
