dist_man1_MANS=

if BUILD_BITCOIND
  dist_man1_MANS+=maryjaned.1
endif

if ENABLE_QT
  dist_man1_MANS+=maryjane-qt.1
endif

if BUILD_BITCOIN_CLI
  dist_man1_MANS+=maryjane-cli.1
endif

if BUILD_BITCOIN_TX
  dist_man1_MANS+=maryjane-tx.1
endif

if BUILD_BITCOIN_UTIL
  dist_man1_MANS+=maryjane-util.1
endif

if ENABLE_WALLET
if BUILD_BITCOIN_WALLET
  dist_man1_MANS+=maryjane-wallet.1
endif
endif
